Proyecto 1/CompiscriptParser.py
# Generated from Compiscript.g4 by ANTLR 4.13.1
# encoding: utf-8
from typing import TextIO
from antlr4 import *
import sys


class CompiscriptParser ( Parser ):

	grammarFileName = "Compiscript.g4"

	atn = ATNDeserializer().deserialize(serializedATN())

	decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

	sharedContextCache = PredictionContextCache()

	literalNames = [ "<INVALID>", "'class'", "'extends'", "'{'", "'}'", 
					"'fun'", "'var'", "'='", "';'", "'for'", "'('", "')'", 
					"'if'", "'else'", "'print'", "'return'", "'while'", 
					"'.'", "'or'", "'and'", "'!='", "'=='", "'>'", "'>='", 
					"'<'", "'<='", "'-'", "'+'", "'/'", "'*'", "'%'", "'['", 
					"','", "']'", "'new'", "'!'", "'true'", "'false'", 
					"'nil'", "'this'", "'super'" ]

	symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
					"<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
					"<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
					"<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
					"<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
					"<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
					"<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
					"<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
					"<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
					"<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
					"<INVALID>", "NUMBER", "STRING", "IDENTIFIER", "WS", 
					"ONE_LINE_COMMENT" ]

	RULE_program = 0
	RULE_declaration = 1
	RULE_classDecl = 2
	RULE_funDecl = 3
	RULE_varDecl = 4
	RULE_statement = 5
	RULE_exprStmt = 6
	RULE_forStmt = 7
	RULE_ifStmt = 8
	RULE_printStmt = 9
	RULE_returnStmt = 10
	RULE_whileStmt = 11
	RULE_block = 12
	RULE_funAnon = 13
	RULE_expression = 14
	RULE_assignment = 15
	RULE_logic_or = 16
	RULE_logic_and = 17
	RULE_equality = 18
	RULE_comparison = 19
	RULE_term = 20
	RULE_factor = 21
	RULE_array = 22
	RULE_instantiation = 23
	RULE_unary = 24
	RULE_call = 25
	RULE_primary = 26
	RULE_function = 27
	RULE_parameters = 28
	RULE_arguments = 29

	ruleNames =  [ "program", "declaration", "classDecl", "funDecl", "varDecl", 
				"statement", "exprStmt", "forStmt", "ifStmt", "printStmt", 
				"returnStmt", "whileStmt", "block", "funAnon", "expression", 
				"assignment", "logic_or", "logic_and", "equality", "comparison", 
				"term", "factor", "array", "instantiation", "unary", 
				"call", "primary", "function", "parameters", "arguments" ]

	EOF = Token.EOF
	T__0=1
	T__1=2
	T__2=3
	T__3=4
	T__4=5
	T__5=6
	T__6=7
	T__7=8
	T__8=9
	T__9=10
	T__10=11
	T__11=12
	T__12=13
	T__13=14
	T__14=15
	T__15=16
	T__16=17
	T__17=18
	T__18=19
	T__19=20
	T__20=21
	T__21=22
	T__22=23
	T__23=24
	T__24=25
	T__25=26
	T__26=27
	T__27=28
	T__28=29
	T__29=30
	T__30=31
	T__31=32
	T__32=33
	T__33=34
	T__34=35
	T__35=36
	T__36=37
	T__37=38
	T__38=39
	T__39=40
	NUMBER=41
	STRING=42
	IDENTIFIER=43
	WS=44
	ONE_LINE_COMMENT=45

	def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
		super().__init__(input, output)
		self.checkVersion("4.13.1")
		self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
		self._predicates = None




	class ProgramContext(ParserRuleContext):
		__slots__ = 'parser'

		def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
			super().__init__(parent, invokingState)
			self.parser = parser

		def EOF(self):
			return self.getToken(CompiscriptParser.EOF, 0)

		def declaration(self, i:int=None):
			if i is None:
				return self.getTypedRuleContexts(CompiscriptParser.DeclarationContext)
			else:
				return self.getTypedRuleContext(CompiscriptParser.DeclarationContext,i)


		def getRuleIndex(self):
			return CompiscriptParser.RULE_program

		def enterRule(self, listener:ParseTreeListener):
			if hasattr( listener, "enterProgram" ):
				listener.enterProgram(self)

		def exitRule(self, listener:ParseTreeListener):
			if hasattr( listener, "exitProgram" ):
				listener.exitProgram(self)

		def accept(self, visitor:ParseTreeVisitor):
			if hasattr( visitor, "visitProgram" ):
				return visitor.visitProgram(self)
			else:
				return visitor.visitChildren(self)




	def program(self):

		localctx = CompiscriptParser.ProgramContext(self, self._ctx, self.state)
		self.enterRule(localctx, 0, self.RULE_program)
		self._la = 0 # Token type
		try:
			self.enterOuterAlt(localctx, 1)
			self.state = 63
			self._errHandler.sync(self)
			_la = self._input.LA(1)
			while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17577220888170) != 0):
				self.state = 60
				self.declaration()
				self.state = 65
				self._errHandler.sync(self)
				_la = self._input.LA(1)

			self.state = 66
			self.match(CompiscriptParser.EOF)
		except RecognitionException as re:
			localctx.exception = re
			self._errHandler.reportError(self, re)
			self._errHandler.recover(self, re)
		finally:
			self.exitRule()
		return localctx


	class DeclarationContext(ParserRuleContext):
		__slots__ = 'parser'

		def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
			super().__init__(parent, invokingState)
			self.parser = parser

		def classDecl(self):
			return self.getTypedRuleContext(CompiscriptParser.ClassDeclContext,0)


		def funDecl(self):
			return self.getTypedRuleContext(CompiscriptParser.FunDeclContext,0)


		def varDecl(self):
			return self.getTypedRuleContext(CompiscriptParser.VarDeclContext,0)


		def statement(self):
			return self.getTypedRuleContext(CompiscriptParser.StatementContext,0)


		def getRuleIndex(self):
			return CompiscriptParser.RULE_declaration

		def enterRule(self, listener:ParseTreeListener):
			if hasattr( listener, "enterDeclaration" ):
				listener.enterDeclaration(self)

		def exitRule(self, listener:ParseTreeListener):
			if hasattr( listener, "exitDeclaration" ):
				listener.exitDeclaration(self)

		def accept(self, visitor:ParseTreeVisitor):
			if hasattr( visitor, "visitDeclaration" ):
				return visitor.visitDeclaration(self)
			else:
				return visitor.visitChildren(self)




	def declaration(self):

		localctx = CompiscriptParser.DeclarationContext(self, self._ctx, self.state)
		self.enterRule(localctx, 2, self.RULE_declaration)
		try:
			self.state = 72
			self._errHandler.sync(self)
			la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
			if la_ == 1:
				self.enterOuterAlt(localctx, 1)
				self.state = 68
				self.classDecl()
				pass

			elif la_ == 2:
				self.enterOuterAlt(localctx, 2)
				self.state = 69
				self.funDecl()
				pass

			elif la_ == 3:
				self.enterOuterAlt(localctx, 3)
				self.state = 70
				self.varDecl()
				pass

			elif la_ == 4:
				self.enterOuterAlt(localctx, 4)
				self.state = 71
				self.statement()
				pass


		except RecognitionException as re:
			localctx.exception = re
			self._errHandler.reportError(self, re)
			self._errHandler.recover(self, re)
		finally:
			self.exitRule()
		return localctx


	class ClassDeclContext(ParserRuleContext):
		__slots__ = 'parser'

		def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
			super().__init__(parent, invokingState)
			self.parser = parser

		def IDENTIFIER(self, i:int=None):
			if i is None:
				return self.getTokens(CompiscriptParser.IDENTIFIER)
			else:
				return self.getToken(CompiscriptParser.IDENTIFIER, i)

		def function(self, i:int=None):
			if i is None:
				return self.getTypedRuleContexts(CompiscriptParser.FunctionContext)
			else:
				return self.getTypedRuleContext(CompiscriptParser.FunctionContext,i)


		def getRuleIndex(self):
			return CompiscriptParser.RULE_classDecl

		def enterRule(self, listener:ParseTreeListener):
			if hasattr( listener, "enterClassDecl" ):
				listener.enterClassDecl(self)

		def exitRule(self, listener:ParseTreeListener):
			if hasattr( listener, "exitClassDecl" ):
				listener.exitClassDecl(self)

		def accept(self, visitor:ParseTreeVisitor):
			if hasattr( visitor, "visitClassDecl" ):
				return visitor.visitClassDecl(self)
			else:
				return visitor.visitChildren(self)




	def classDecl(self):

		localctx = CompiscriptParser.ClassDeclContext(self, self._ctx, self.state)
		self.enterRule(localctx, 4, self.RULE_classDecl)
		self._la = 0 # Token type
		try:
			self.enterOuterAlt(localctx, 1)
			self.state = 74
			self.match(CompiscriptParser.T__0)
			self.state = 75
			self.match(CompiscriptParser.IDENTIFIER)
			self.state = 78
			self._errHandler.sync(self)
			_la = self._input.LA(1)
			if _la==2:
				self.state = 76
				self.match(CompiscriptParser.T__1)
				self.state = 77
				self.match(CompiscriptParser.IDENTIFIER)


			self.state = 80
			self.match(CompiscriptParser.T__2)
			self.state = 84
			self._errHandler.sync(self)
			_la = self._input.LA(1)
			while _la==43:
				self.state = 81
				self.function()
				self.state = 86
				self._errHandler.sync(self)
				_la = self._input.LA(1)

			self.state = 87
			self.match(CompiscriptParser.T__3)
		except RecognitionException as re:
			localctx.exception = re
			self._errHandler.reportError(self, re)
			self._errHandler.recover(self, re)
		finally:
			self.exitRule()
		return localctx


	class FunDeclContext(ParserRuleContext):
		__slots__ = 'parser'

		def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
			super().__init__(parent, invokingState)
			self.parser = parser

		def function(self):
			return self.getTypedRuleContext(CompiscriptParser.FunctionContext,0)


		def getRuleIndex(self):
			return CompiscriptParser.RULE_funDecl

		def enterRule(self, listener:ParseTreeListener):
			if hasattr( listener, "enterFunDecl" ):
				listener.enterFunDecl(self)

		def exitRule(self, listener:ParseTreeListener):
			if hasattr( listener, "exitFunDecl" ):
				listener.exitFunDecl(self)

		def accept(self, visitor:ParseTreeVisitor):
			if hasattr( visitor, "visitFunDecl" ):
				return visitor.visitFunDecl(self)
			else:
				return visitor.visitChildren(self)




	def funDecl(self):

		localctx = CompiscriptParser.FunDeclContext(self, self._ctx, self.state)
		self.enterRule(localctx, 6, self.RULE_funDecl)
		try:
			self.enterOuterAlt(localctx, 1)
			self.state = 89
			self.match(CompiscriptParser.T__4)
			self.state = 90
			self.function()
		except RecognitionException as re:
			localctx.exception = re
			self._errHandler.reportError(self, re)
			self._errHandler.recover(self, re)
		finally:
			self.exitRule()
		return localctx


	class VarDeclContext(ParserRuleContext):
		__slots__ = 'parser'

		def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
			super().__init__(parent, invokingState)
			self.parser = parser

		def IDENTIFIER(self):
			return self.getToken(CompiscriptParser.IDENTIFIER, 0)

		def expression(self):
			return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


		def getRuleIndex(self):
			return CompiscriptParser.RULE_varDecl

		def enterRule(self, listener:ParseTreeListener):
			if hasattr( listener, "enterVarDecl" ):
				listener.enterVarDecl(self)

		def exitRule(self, listener:ParseTreeListener):
			if hasattr( listener, "exitVarDecl" ):
				listener.exitVarDecl(self)

		def accept(self, visitor:ParseTreeVisitor):
			if hasattr( visitor, "visitVarDecl" ):
				return visitor.visitVarDecl(self)
			else:
				return visitor.visitChildren(self)




	def varDecl(self):

		localctx = CompiscriptParser.VarDeclContext(self, self._ctx, self.state)
		self.enterRule(localctx, 8, self.RULE_varDecl)
		self._la = 0 # Token type
		try:
			self.enterOuterAlt(localctx, 1)
			self.state = 92
			self.match(CompiscriptParser.T__5)
			self.state = 93
			self.match(CompiscriptParser.IDENTIFIER)
			self.state = 96
			self._errHandler.sync(self)
			_la = self._input.LA(1)
			if _la==7:
				self.state = 94
				self.match(CompiscriptParser.T__6)
				self.state = 95
				self.expression()


			self.state = 98
			self.match(CompiscriptParser.T__7)
		except RecognitionException as re:
			localctx.exception = re
			self._errHandler.reportError(self, re)
			self._errHandler.recover(self, re)
		finally:
			self.exitRule()
		return localctx


	class StatementContext(ParserRuleContext):
		__slots__ = 'parser'

		def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
			super().__init__(parent, invokingState)
			self.parser = parser

		def exprStmt(self):
			return self.getTypedRuleContext(CompiscriptParser.ExprStmtContext,0)


		def forStmt(self):
			return self.getTypedRuleContext(CompiscriptParser.ForStmtContext,0)


		def ifStmt(self):
			return self.getTypedRuleContext(CompiscriptParser.IfStmtContext,0)


		def printStmt(self):
			return self.getTypedRuleContext(CompiscriptParser.PrintStmtContext,0)


		def returnStmt(self):
			return self.getTypedRuleContext(CompiscriptParser.ReturnStmtContext,0)


		def whileStmt(self):
			return self.getTypedRuleContext(CompiscriptParser.WhileStmtContext,0)


		def block(self):
			return self.getTypedRuleContext(CompiscriptParser.BlockContext,0)


		def getRuleIndex(self):
			return CompiscriptParser.RULE_statement

		def enterRule(self, listener:ParseTreeListener):
			if hasattr( listener, "enterStatement" ):
				listener.enterStatement(self)

		def exitRule(self, listener:ParseTreeListener):
			if hasattr( listener, "exitStatement" ):
				listener.exitStatement(self)

		def accept(self, visitor:ParseTreeVisitor):
			if hasattr( visitor, "visitStatement" ):
				return visitor.visitStatement(self)
			else:
				return visitor.visitChildren(self)




	def statement(self):

		localctx = CompiscriptParser.StatementContext(self, self._ctx, self.state)
		self.enterRule(localctx, 10, self.RULE_statement)
		try:
			self.state = 107
			self._errHandler.sync(self)
			token = self._input.LA(1)
			if token in [5, 10, 26, 31, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43]:
				self.enterOuterAlt(localctx, 1)
				self.state = 100
				self.exprStmt()
				pass
			elif token in [9]:
				self.enterOuterAlt(localctx, 2)
				self.state = 101
				self.forStmt()
				pass
			elif token in [12]:
				self.enterOuterAlt(localctx, 3)
				self.state = 102
				self.ifStmt()
				pass
			elif token in [14]:
				self.enterOuterAlt(localctx, 4)
				self.state = 103
				self.printStmt()
				pass
			elif token in [15]:
				self.enterOuterAlt(localctx, 5)
				self.state = 104
				self.returnStmt()
				pass
			elif token in [16]:
				self.enterOuterAlt(localctx, 6)
				self.state = 105
				self.whileStmt()
				pass
			elif token in [3]:
				self.enterOuterAlt(localctx, 7)
				self.state = 106
				self.block()
				pass
			else:
				raise NoViableAltException(self)

		except RecognitionException as re:
			localctx.exception = re
			self._errHandler.reportError(self, re)
			self._errHandler.recover(self, re)
		finally:
			self.exitRule()
		return localctx


	class ExprStmtContext(ParserRuleContext):
		__slots__ = 'parser'

		def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
			super().__init__(parent, invokingState)
			self.parser = parser

		def expression(self):
			return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


		def getRuleIndex(self):
			return CompiscriptParser.RULE_exprStmt

		def enterRule(self, listener:ParseTreeListener):
			if hasattr( listener, "enterExprStmt" ):
				listener.enterExprStmt(self)

		def exitRule(self, listener:ParseTreeListener):
			if hasattr( listener, "exitExprStmt" ):
				listener.exitExprStmt(self)

		def accept(self, visitor:ParseTreeVisitor):
			if hasattr( visitor, "visitExprStmt" ):
				return visitor.visitExprStmt(self)
			else:
				return visitor.visitChildren(self)




	def exprStmt(self):

		localctx = CompiscriptParser.ExprStmtContext(self, self._ctx, self.state)
		self.enterRule(localctx, 12, self.RULE_exprStmt)
		try:
			self.enterOuterAlt(localctx, 1)
			self.state = 109
			self.expression()
			self.state = 110
			self.match(CompiscriptParser.T__7)
		except RecognitionException as re:
			localctx.exception = re
			self._errHandler.reportError(self, re)
			self._errHandler.recover(self, re)
		finally:
			self.exitRule()
		return localctx


	class ForStmtContext(ParserRuleContext):
		__slots__ = 'parser'

		def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
			super().__init__(parent, invokingState)
			self.parser = parser

		def statement(self):
			return self.getTypedRuleContext(CompiscriptParser.StatementContext,0)


		def varDecl(self):
			return self.getTypedRuleContext(CompiscriptParser.VarDeclContext,0)


		def exprStmt(self):
			return self.getTypedRuleContext(CompiscriptParser.ExprStmtContext,0)


		def expression(self, i:int=None):
			if i is None:
				return self.getTypedRuleContexts(CompiscriptParser.ExpressionContext)
			else:
				return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,i)


		def getRuleIndex(self):
			return CompiscriptParser.RULE_forStmt

		def enterRule(self, listener:ParseTreeListener):
			if hasattr( listener, "enterForStmt" ):
				listener.enterForStmt(self)

		def exitRule(self, listener:ParseTreeListener):
			if hasattr( listener, "exitForStmt" ):
				listener.exitForStmt(self)

		def accept(self, visitor:ParseTreeVisitor):
			if hasattr( visitor, "visitForStmt" ):
				return visitor.visitForStmt(self)
			else:
				return visitor.visitChildren(self)




	def forStmt(self):

		localctx = CompiscriptParser.ForStmtContext(self, self._ctx, self.state)
		self.enterRule(localctx, 14, self.RULE_forStmt)
		self._la = 0 # Token type
		try:
			self.enterOuterAlt(localctx, 1)
			self.state = 112
			self.match(CompiscriptParser.T__8)
			self.state = 113
			self.match(CompiscriptParser.T__9)
			self.state = 117
			self._errHandler.sync(self)
			token = self._input.LA(1)
			if token in [6]:
				self.state = 114
				self.varDecl()
				pass
			elif token in [5, 10, 26, 31, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43]:
				self.state = 115
				self.exprStmt()
				pass
			elif token in [8]:
				self.state = 116
				self.match(CompiscriptParser.T__7)
				pass
			else:
				raise NoViableAltException(self)

			self.state = 120
			self._errHandler.sync(self)
			_la = self._input.LA(1)
			if (((_la) & ~0x3f) == 0 and ((1 << _la) & 17577220768800) != 0):
				self.state = 119
				self.expression()


			self.state = 122
			self.match(CompiscriptParser.T__7)
			self.state = 124
			self._errHandler.sync(self)
			_la = self._input.LA(1)
			if (((_la) & ~0x3f) == 0 and ((1 << _la) & 17577220768800) != 0):
				self.state = 123
				self.expression()


			self.state = 126
			self.match(CompiscriptParser.T__10)
			self.state = 127
			self.statement()
		except RecognitionException as re:
			localctx.exception = re
			self._errHandler.reportError(self, re)
			self._errHandler.recover(self, re)
		finally:
			self.exitRule()
		return localctx


	class IfStmtContext(ParserRuleContext):
		__slots__ = 'parser'

		def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
			super().__init__(parent, invokingState)
			self.parser = parser

		def expression(self):
			return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


		def statement(self, i:int=None):
			if i is None:
				return self.getTypedRuleContexts(CompiscriptParser.StatementContext)
			else:
				return self.getTypedRuleContext(CompiscriptParser.StatementContext,i)


		def getRuleIndex(self):
			return CompiscriptParser.RULE_ifStmt

		def enterRule(self, listener:ParseTreeListener):
			if hasattr( listener, "enterIfStmt" ):
				listener.enterIfStmt(self)

		def exitRule(self, listener:ParseTreeListener):
			if hasattr( listener, "exitIfStmt" ):
				listener.exitIfStmt(self)

		def accept(self, visitor:ParseTreeVisitor):
			if hasattr( visitor, "visitIfStmt" ):
				return visitor.visitIfStmt(self)
			else:
				return visitor.visitChildren(self)




	def ifStmt(self):

		localctx = CompiscriptParser.IfStmtContext(self, self._ctx, self.state)
		self.enterRule(localctx, 16, self.RULE_ifStmt)
		try:
			self.enterOuterAlt(localctx, 1)
			self.state = 129
			self.match(CompiscriptParser.T__11)
			self.state = 130
			self.match(CompiscriptParser.T__9)
			self.state = 131
			self.expression()
			self.state = 132
			self.match(CompiscriptParser.T__10)
			self.state = 133
			self.statement()
			self.state = 136
			self._errHandler.sync(self)
			la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
			if la_ == 1:
				self.state = 134
				self.match(CompiscriptParser.T__12)
				self.state = 135
				self.statement()


		except RecognitionException as re:
			localctx.exception = re
			self._errHandler.reportError(self, re)
			self._errHandler.recover(self, re)
		finally:
			self.exitRule()
		return localctx


	class PrintStmtContext(ParserRuleContext):
		__slots__ = 'parser'

		def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
			super().__init__(parent, invokingState)
			self.parser = parser

		def expression(self):
			return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


		def getRuleIndex(self):
			return CompiscriptParser.RULE_printStmt

		def enterRule(self, listener:ParseTreeListener):
			if hasattr( listener, "enterPrintStmt" ):
				listener.enterPrintStmt(self)

		def exitRule(self, listener:ParseTreeListener):
			if hasattr( listener, "exitPrintStmt" ):
				listener.exitPrintStmt(self)

		def accept(self, visitor:ParseTreeVisitor):
			if hasattr( visitor, "visitPrintStmt" ):
				return visitor.visitPrintStmt(self)
			else:
				return visitor.visitChildren(self)




	def printStmt(self):

		localctx = CompiscriptParser.PrintStmtContext(self, self._ctx, self.state)
		self.enterRule(localctx, 18, self.RULE_printStmt)
		try:
			self.enterOuterAlt(localctx, 1)
			self.state = 138
			self.match(CompiscriptParser.T__13)
			self.state = 139
			self.expression()
			self.state = 140
			self.match(CompiscriptParser.T__7)
		except RecognitionException as re:
			localctx.exception = re
			self._errHandler.reportError(self, re)
			self._errHandler.recover(self, re)
		finally:
			self.exitRule()
		return localctx


	class ReturnStmtContext(ParserRuleContext):
		__slots__ = 'parser'

		def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
			super().__init__(parent, invokingState)
			self.parser = parser

		def expression(self):
			return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


		def getRuleIndex(self):
			return CompiscriptParser.RULE_returnStmt

		def enterRule(self, listener:ParseTreeListener):
			if hasattr( listener, "enterReturnStmt" ):
				listener.enterReturnStmt(self)

		def exitRule(self, listener:ParseTreeListener):
			if hasattr( listener, "exitReturnStmt" ):
				listener.exitReturnStmt(self)

		def accept(self, visitor:ParseTreeVisitor):
			if hasattr( visitor, "visitReturnStmt" ):
				return visitor.visitReturnStmt(self)
			else:
				return visitor.visitChildren(self)




	def returnStmt(self):

		localctx = CompiscriptParser.ReturnStmtContext(self, self._ctx, self.state)
		self.enterRule(localctx, 20, self.RULE_returnStmt)
		self._la = 0 # Token type
		try:
			self.enterOuterAlt(localctx, 1)
			self.state = 142
			self.match(CompiscriptParser.T__14)
			self.state = 144
			self._errHandler.sync(self)
			_la = self._input.LA(1)
			if (((_la) & ~0x3f) == 0 and ((1 << _la) & 17577220768800) != 0):
				self.state = 143
				self.expression()


			self.state = 146
			self.match(CompiscriptParser.T__7)
		except RecognitionException as re:
			localctx.exception = re
			self._errHandler.reportError(self, re)
			self._errHandler.recover(self, re)
		finally:
			self.exitRule()
		return localctx


	class WhileStmtContext(ParserRuleContext):
		__slots__ = 'parser'

		def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
			super().__init__(parent, invokingState)
			self.parser = parser

		def expression(self):
			return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


		def statement(self):
			return self.getTypedRuleContext(CompiscriptParser.StatementContext,0)


		def getRuleIndex(self):
			return CompiscriptParser.RULE_whileStmt

		def enterRule(self, listener:ParseTreeListener):
			if hasattr( listener, "enterWhileStmt" ):
				listener.enterWhileStmt(self)

		def exitRule(self, listener:ParseTreeListener):
			if hasattr( listener, "exitWhileStmt" ):
				listener.exitWhileStmt(self)

		def accept(self, visitor:ParseTreeVisitor):
			if hasattr( visitor, "visitWhileStmt" ):
				return visitor.visitWhileStmt(self)
			else:
				return visitor.visitChildren(self)




	def whileStmt(self):

		localctx = CompiscriptParser.WhileStmtContext(self, self._ctx, self.state)
		self.enterRule(localctx, 22, self.RULE_whileStmt)
		try:
			self.enterOuterAlt(localctx, 1)
			self.state = 148
			self.match(CompiscriptParser.T__15)
			self.state = 149
			self.match(CompiscriptParser.T__9)
			self.state = 150
			self.expression()
			self.state = 151
			self.match(CompiscriptParser.T__10)
			self.state = 152
			self.statement()
		except RecognitionException as re:
			localctx.exception = re
			self._errHandler.reportError(self, re)
			self._errHandler.recover(self, re)
		finally:
			self.exitRule()
		return localctx


	class BlockContext(ParserRuleContext):
		__slots__ = 'parser'

		def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
			super().__init__(parent, invokingState)
			self.parser = parser

		def declaration(self, i:int=None):
			if i is None:
				return self.getTypedRuleContexts(CompiscriptParser.DeclarationContext)
			else:
				return self.getTypedRuleContext(CompiscriptParser.DeclarationContext,i)


		def getRuleIndex(self):
			return CompiscriptParser.RULE_block

		def enterRule(self, listener:ParseTreeListener):
			if hasattr( listener, "enterBlock" ):
				listener.enterBlock(self)

		def exitRule(self, listener:ParseTreeListener):
			if hasattr( listener, "exitBlock" ):
				listener.exitBlock(self)

		def accept(self, visitor:ParseTreeVisitor):
			if hasattr( visitor, "visitBlock" ):
				return visitor.visitBlock(self)
			else:
				return visitor.visitChildren(self)




	def block(self):

		localctx = CompiscriptParser.BlockContext(self, self._ctx, self.state)
		self.enterRule(localctx, 24, self.RULE_block)
		self._la = 0 # Token type
		try:
			self.enterOuterAlt(localctx, 1)
			self.state = 154
			self.match(CompiscriptParser.T__2)
			self.state = 158
			self._errHandler.sync(self)
			_la = self._input.LA(1)
			while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17577220888170) != 0):
				self.state = 155
				self.declaration()
				self.state = 160
				self._errHandler.sync(self)
				_la = self._input.LA(1)

			self.state = 161
			self.match(CompiscriptParser.T__3)
		except RecognitionException as re:
			localctx.exception = re
			self._errHandler.reportError(self, re)
			self._errHandler.recover(self, re)
		finally:
			self.exitRule()
		return localctx


	class FunAnonContext(ParserRuleContext):
		__slots__ = 'parser'

		def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
			super().__init__(parent, invokingState)
			self.parser = parser

		def block(self):
			return self.getTypedRuleContext(CompiscriptParser.BlockContext,0)


		def parameters(self):
			return self.getTypedRuleContext(CompiscriptParser.ParametersContext,0)


		def getRuleIndex(self):
			return CompiscriptParser.RULE_funAnon

		def enterRule(self, listener:ParseTreeListener):
			if hasattr( listener, "enterFunAnon" ):
				listener.enterFunAnon(self)

		def exitRule(self, listener:ParseTreeListener):
			if hasattr( listener, "exitFunAnon" ):
				listener.exitFunAnon(self)

		def accept(self, visitor:ParseTreeVisitor):
			if hasattr( visitor, "visitFunAnon" ):
				return visitor.visitFunAnon(self)
			else:
				return visitor.visitChildren(self)




	def funAnon(self):

		localctx = CompiscriptParser.FunAnonContext(self, self._ctx, self.state)
		self.enterRule(localctx, 26, self.RULE_funAnon)
		self._la = 0 # Token type
		try:
			self.enterOuterAlt(localctx, 1)
			self.state = 163
			self.match(CompiscriptParser.T__4)
			self.state = 164
			self.match(CompiscriptParser.T__9)
			self.state = 166
			self._errHandler.sync(self)
			_la = self._input.LA(1)
			if _la==43:
				self.state = 165
				self.parameters()


			self.state = 168
			self.match(CompiscriptParser.T__10)
			self.state = 169
			self.block()
		except RecognitionException as re:
			localctx.exception = re
			self._errHandler.reportError(self, re)
			self._errHandler.recover(self, re)
		finally:
			self.exitRule()
		return localctx


	class ExpressionContext(ParserRuleContext):
		__slots__ = 'parser'

		def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
			super().__init__(parent, invokingState)
			self.parser = parser

		def assignment(self):
			return self.getTypedRuleContext(CompiscriptParser.AssignmentContext,0)


		def funAnon(self):
			return self.getTypedRuleContext(CompiscriptParser.FunAnonContext,0)


		def getRuleIndex(self):
			return CompiscriptParser.RULE_expression

		def enterRule(self, listener:ParseTreeListener):
			if hasattr( listener, "enterExpression" ):
				listener.enterExpression(self)

		def exitRule(self, listener:ParseTreeListener):
			if hasattr( listener, "exitExpression" ):
				listener.exitExpression(self)

		def accept(self, visitor:ParseTreeVisitor):
			if hasattr( visitor, "visitExpression" ):
				return visitor.visitExpression(self)
			else:
				return visitor.visitChildren(self)




	def expression(self):
